--- a/src/styles/cmps/_hero.scss
+++ b/src/styles/cmps/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    padding-top: 7rem;
+    padding-top: 5rem;
     padding-inline: var(--padding-inline);
 
     @include for-table-layout {
